--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -10,6 +10,10 @@
 </p>
 
 <p>
+<%= render :partial => 'list_of_books' %>
+</p>
+
+<p>
   <%= link_to "Edit", edit_author_path(@author) %> |
   <%= link_to "Destroy", @author, :confirm => 'Are you sure?', :method => :delete %> |
   <%= link_to "View All", authors_path %>
